# CMakeReferenceProject

./: .gitignore  CMakeLists.txt  README.md  setup_cmake.py  testmain.cpp
scripts/cmake/: googletest_download.cmake  googletest_integrate.cmake  module_util.cmake
software/: CMakeLists.txt  main.cpp  testmain.cpp
software/arithmetics/: CMakeLists.txt
software/arithmetics/test/: add_test.cpp  sub_test.cpp
software/hello/: CMakeLists.txt
software/hello/src/: hello.cpp
software/hello/test/: hello_test.cpp
software/module_hello/: CMakeLists.txt
software/module_hello/test/: hello_test.cpp
src/: main.cpp
